Make dashboard the main page - root route now shows dashboard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -294,8 +294,8 @@
             </div>
 
             <div style="margin-top: 2rem; text-align: center;">
-                <a href="/" class="nav-link">
-                    <i class="fas fa-home"></i> Back to Website
+                <a href="/website" class="nav-link">
+                    <i class="fas fa-globe"></i> View Website
                 </a>
             </div>
         </main>
